# FLARE

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  README.md  _config.yml  cookiecutter.json  pyproject.toml  run_analysis.py  run_mc_production.py  settings.json  setup.cfg
.github/workflows/: ci.yaml  release.yaml  test_release.yaml
FCC_Software_Framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
FLARE-{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  run_mc_production.py
FLARE-{{cookiecutter.project_slug}}/src/: __init__.py
FLARE-{{cookiecutter.project_slug}}/src/fcc_analysis/: tasks.py
FLARE-{{cookiecutter.project_slug}}/src/mc_production/: production_types.py  production_types.yaml  tasks.py
FLARE-{{cookiecutter.project_slug}}/src/schemas/: config_details.json
FLARE-{{cookiecutter.project_slug}}/src/utils/: tasks.py  yaml.py
FLARE-{{cookiecutter.project_slug}}/tests/: conftest.py  test_file_structure.py  test_mc_production.py  test_stages.py  test_utils_tasks.py
analysis/: tasks.py
analysis/config/: details.yaml
analysis/tasks/: README.txt  analysis_final.py  analysis_plot.py  analysis_stage1.py  analysis_stage2.py
analysis/templates/: steering_file.jinja2
analysis/utils/: __init__.py  data.py  dirs.py  jinja2_utils.py  stages.py  steering_files.py  tasks.py  yaml.py
config/: data.yaml
config/stages/: stage1.py
flare/: __init__.py  run_analysis.py  run_mc_production.py
flare/cli/: arguments.py  auto_importer.py  cli_registry.py  flare_logging.py  logging.py  main.py  new_main.py  run_command.py  run_commands.py  utils.py
flare/cli/lint/: lint_fcc_scripts.py  registry.py  run_lint_fcc_scripts.py
flare/cli/run/: registry.py  run_fccanalysis.py  run_mcproduction.py  utils.py
hooks/: post_gen_project.py  pre_gen_project.py
src/: __init__.py  analysis_tasks.py  definitions.py  mc_production_tasks.py
src/fcc_analysis/: fcc_analysis_baseclass.py  fcc_inputfiles_mixin.py  fcc_production.yaml  fcc_stages.py  fccanalysis_baseclass.py  tasks.py
src/mc_production/: generator_specific_methods.py  mc_production_types.py  production_types.py  production_types.yaml  tasks.py
src/schemas/: config_details.json  mc_production_details.json  production_types.json
src/utils/: __init__.py  bracket_mappings.py  data.py  dirs.py  jinja2_utils.py  stages.py  tasks.py  yaml.py
tests/: conftest.py  test_file_structure.py  test_mc_production.py  test_stages.py
tests/src/: test_definitions.py
{{cookiecutter.project_slug}}/: .gitignore  README.md  run_analysis.py  setup.cfg
{{cookiecutter.project_slug}}/src/: tasks.py
{{cookiecutter.project_slug}}/tests/: test_file_structure.py  test_utils_tasks.py
(+77 files in other folders)
