[metadata]
name = FCC-Software-Framework
version = 0.0.1
author = Cameron Harris
author_email = cameron.harris@adelaide.edu.au
description = Framework for streamlining the FCC framework powered by b2luigi
url = https://github.com/amanmdesai/FCC_Software_Framework.git

[options]
packages = find:
python_requires = >=3.6
install_requires =
    black==24.4.2
    astropy==5.2.2
    b2luigi==1.1.1
    decaylanguage==0.18.2
    formulate==0.1.1
    ipykernel==6.29.3
    jsonschema==4.21.1
    uproot==5.3.1
    pre-commit==3.5.0
    pipdeptree==2.16.2
    sly==0.5
    termcolor==2.4.0
    wheel==0.43.0
    pyYAML==6.0.2

[options.packages.find]
include =
    analysis
    analysis.*
    config

[flake8]
max-line-length = 88
extend-ignore = E203,W503
max-coomplexity = 10

[isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = True
known_first_party = util,exe,test
known_third_party = matplotlib,psutil,scipy,seaborn,termcolor,uproot,yaml,b2luigi

[pydocstyle]
ignore = D203,D212,D406,D407,D408,D409,D413
