[metadata]
name = FLARE
version = 0.2.0
author = Cameron Harris
author_email = cameron.harris@adelaide.edu.au
description = Framework for streamlining the FCC framework powered by b2luigi
url = https://github.com/CamCoop1/FLARE.git

[options]
packages = find:
python_requires = >=3.6
install_requires =
    b2luigi >=1.1.1

[options.packages.find]
include =
    src
    src.*
    analysis

[flake8]
max-line-length = 88
extend-ignore = E203,W503
max-coomplexity = 10

[isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = True
known_first_party = util,exe,test
known_third_party = yaml,b2luigi

[pydocstyle]
ignore = D203,D212,D406,D407,D408,D409,D413
